# Limira

./: .env.example  .gitignore  README.md  docker-compose.limira.yml  docker-compose.limra-aggressive.yml  draft.md  日志.md
.humanize/: .pending-session-id
apps/gradio-demo/: archive_writer.py  auth_adapter.py  limra_artifacts.py  main.py  prompt_patch.py  pyproject.toml  runner_api.py  task_store.py
apps/limira-agent/: pyproject.toml
apps/limira-agent/conf/: config.yaml
apps/limira-agent/conf/agent/: default.yaml  demo.yaml
apps/limira-agent/src/: __init__.py
apps/limira-agent/src/config/: __init__.py  settings.py
apps/limira-agent/src/core/: __init__.py  orchestrator.py  pipeline.py  research_graph.py  research_graph_support.py  research_graph_uploads.py  research_graph_verifier.py  research_langgraph.py  tool_executor.py
apps/limira-agent/src/io/: input_handler.py
apps/limira-agent/src/llm/providers/: anthropic_client.py  openai_client.py
apps/limira-agent/src/logging/: task_logger.py
apps/limira-agent/src/utils/: parsing_utils.py
apps/limira-agent/tests/: test_input_handler_zip.py
apps/limira-android/: .gitignore  build.gradle.kts  settings.gradle.kts
apps/limira-ios/: README.md
apps/limira-runner/: .env.example  README.md  archive_writer.py  auth_adapter.py  limira_artifacts.py  pipeline_helpers.py  prompt_patch.py  pyproject.toml  runner_api.py  task_store.py
apps/limira-runner/tests/: test_archive_writer.py  test_deep_research_offline_eval.py  test_limira_artifacts.py  test_limira_deploy_contract.py  test_limira_frontend_contract.py  test_limira_web_routes.py  test_research_graph.py  test_research_graph_pipeline.py  test_research_graph_verifier_semantics.py  test_runner_api.py  test_runner_api_auth_cancel_diagnostics.py  test_runner_api_resume_archive.py  test_runner_config.py  test_task_store_and_auth.py
apps/limira-runner/tests/limira_web_route_parts/: test_limira_web_routes_part_000.pyfrag  test_limira_web_routes_part_001.pyfrag  test_limira_web_routes_part_002.pyfrag  test_limira_web_routes_part_003.pyfrag  test_limira_web_routes_part_004.pyfrag  test_limira_web_routes_part_005.pyfrag  test_limira_web_routes_part_006.pyfrag
apps/limira-standalone/: server.mjs
apps/open-webui-mirothinker/: README.md  SMOKE.md  mirothinker_deep_research.py  pyproject.toml
apps/open-webui-mirothinker/smoke-results/: 2026-06-06-round4-open-webui-runtime-smoke.md
apps/open-webui-mirothinker/tests/: test_mirothinker_deep_research.py
docs/: langchain-research-workflow-plan.md  mirothinker-runner-api.md
libs/limira-tools/: pyproject.toml
libs/limira-tools/src/limira_tools/: __init__.py  limira_artifacts.py  limira_evidence.py  manager.py
libs/limira-tools/src/limira_tools/dev_mcp_servers/: jina_scrape_llm_summary.py  limira_artifact_recorder.py  search_and_scrape_webpage.py
libs/limira-tools/src/limira_tools/mcp_servers/: browser_session.py
scripts/: start-https.sh  start-local.sh
(+247 files in other folders)
