[project]
name = "limira-agent"
version = "0.1.0"
description = "Limira research agent runtime"
requires-python = ">=3.12"
dependencies = [
    "limira-tools>=0.1.0",
    "jinja2>=3.1.4",
    "markdownify>=0.14.1",
    "python-dotenv",
    "pdfminer-six",
    "python-pptx",
    "mcp",
    "fastmcp",
    "anthropic",
    "e2b-code-interpreter==1.2.1",
    "mammoth>=1.9.0",
    "openpyxl>=3.1.5",
    "markitdown>=0.1.1",
    "regex>=2024.11.6",
    "openai>=1.78.1",
    "tenacity>=9.1.2",
    "omegaconf>=2.3.0",
    "hydra-core",
    "tiktoken>=0.9.0",
    "aiohttp",
    "colorama>=0.4.6",
    "json-repair>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.uv.sources]
limira-tools = { path = "../../libs/limira-tools", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
