[project]
name = "limira-runner"
version = "0.1.0"
description = "Limira Runner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.62",
    "fastapi>=0.135.1",
    "faster-whisper>=1.2.1",
    "fpdf2>=2.8.7",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "hydra-core>=1.3.0",
    "limira-agent",
    "aiohttp>=3.12.15",
    "psycopg[binary]>=3.2.9",
    "pypdf>=6.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./"]

[tool.uv.sources]
limira-agent = { path = "../limira-agent", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1",
]
