[project]
name = "limira-tools"
version = "0.1.0"
description = "Limira tool management and MCP server utilities"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "playwright>=1.40.0",
    "e2b-code-interpreter==1.2.1",
    "markitdown>=0.1.1",
    "aiohttp",
    "httpx",
    "tenacity>=9.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/limira_tools"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
